# Techstein-RAG-Project

./: .env.example  .gitignore  README.md  README_API.md  docker-compose.yml  pyproject.toml  pytest.ini
.github/workflows/: tests.yml
alembic/: env.py
alembic/versions/: 2a3c0d4f5709_add_chat_type_favorites_table.py  6ad33dd7c1c1_initial_migration.py  e6b4cb3c0892_add_autogenerated_chat_title_bool.py
config/: settings.py
data/: ENEM --- Conhecimento do ENEM de 2020 à 2025.xlsx  README.md
shared/database/: session.py
shared/database/models/: __init__.py  chat.py  chat_type.py  chat_type_favorite.py  ingestion_job.py  knowledge_chunk.py  message.py  user.py
shared/qdrant/: client.py
src/ai/: embedding.py  loader.py  provider.py
src/ai/provider/: __init__.py  base.py  embedding.py  llm.py  reranker.py  utils.py
src/api/: dependencies.py  main.py
src/api/routes/: auth.py  chat_types.py  chats.py  jobs.py  upload.py
src/api/schemas/: auth.py  chat.py  chat_type.py  ingestion.py  title_generation.py  upload.py
src/rag/: pipeline.py  retriever.py
src/repositories/: chat.py  chat_type.py  chat_type_favorite.py  ingestion_job.py  user.py
src/services/: auth.py  background.py  chat.py  email.py  ingestion.py  seeder.py
src/web/: .dockerignore  Dockerfile  README.md  package-lock.json  package.json  tailwind.config.js  tsconfig.json
tests/: .env.test  conftest.py
tests/integration/: test_basic_flows.py  test_end_to_end.py
tests/performance/: test_load.py
tests/regression/: test_regression.py
tests/unit/: test_background_service.py  test_chat_repository.py  test_chat_service.py  test_chat_type_favorite_repository.py  test_chat_type_repository.py  test_ingestion_job_repository.py  test_ingestion_service.py  test_provider_utils.py  test_user_repository.py
(+53 files in other folders)
